claim button wrap issue fix

--- a/src/views/Dashboard/DashboardV3.css
+++ b/src/views/Dashboard/DashboardV3.css
@@ -230,7 +230,7 @@ p{
 .faucet .faucet-right .claim-btn{
   background: rgba(255, 255, 255, 0.05);
   border: solid 1px rgba(255, 255, 255, 0.2);
-  padding: 11px 73px;
+  padding: 11px 20px;
   border-radius: 16px;
   font-size: 20px;
   font-weight: bold;
